WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200019
[bmalloc] IsoTLS is not deallocated in TLS destructor
https://bugs.webkit.org/show_bug.cgi?id=200019
Summary
[bmalloc] IsoTLS is not deallocated in TLS destructor
Yusuke Suzuki
Reported
2019-07-22 16:36:12 PDT
...
Attachments
Patch
(1.79 KB, patch)
2019-07-22 16:48 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-07-22 16:48:44 PDT
Created
attachment 374653
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-07-22 16:49:13 PDT
<
rdar://problem/53423186
>
Mark Lam
Comment 3
2019-07-22 16:52:22 PDT
Comment on
attachment 374653
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2019-07-22 17:09:46 PDT
Committed
r247709
: <
https://trac.webkit.org/changeset/247709
>
Yusuke Suzuki
Comment 5
2019-07-22 17:18:46 PDT
Committed
r247711
: <
https://trac.webkit.org/changeset/247711
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug