Source/bmalloc/bmalloc/IsoTLS.cpp
@@ -114,6 +114,7 @@ IsoTLS* IsoTLS::ensureEntries(unsigned offset)
                     entry->move(src, dst);
                     entry->destruct(src);
                 });
+            tls->~IsoTLS();
             vmDeallocate(tls, tls->size());
         }
         tls = newTLS;
@@ -141,6 +142,8 @@ void IsoTLS::destructor(void* arg)
             entry->scavenge(data);
             entry->destruct(data);
         });
+    tls->~IsoTLS();
+    vmDeallocate(tls, tls->size());
 }
 
 size_t IsoTLS::sizeForCapacity(unsigned capacity)
